--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
+    "audio-react-recorder": "^1.0.4",
+    "axios": "^0.26.0",
     "bootstrap": "^4.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
     "react-google-charts": "^3.0.15",
+    "react-player": "^2.9.0",
     "react-router": "^5.1.1",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
