--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "audio-react-recorder": "^1.0.4",
     "axios": "^0.26.0",
     "bootstrap": "^4.3.1",
+    "mic-recorder-to-mp3": "^2.2.2",
     "node-sass": "^4.12.0",
+    "nodeman": "^1.1.2",
     "react": "^16.10.1",
     "react-audio-player": "^0.17.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
     "react-google-charts": "^3.0.15",
+    "react-media-recorder": "^1.6.3",
     "react-player": "^2.9.0",
     "react-router": "^5.1.1",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
+    "react-voice-recorder": "^2.1.2",
     "universal-cookie": "^4.0.2"
   },
   "scripts": {
