--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
     "react-google-charts": "^3.0.15",
+    "react-markdown": "^8.0.0",
     "react-media-recorder": "^1.6.3",
     "react-player": "^2.9.0",
     "react-router": "^5.1.1",
