--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "audio-react-recorder": "^1.0.4",
     "axios": "^0.26.0",
     "bootstrap": "^4.3.1",
+    "marked": "^4.0.14",
     "mic-recorder-to-mp3": "^2.2.2",
-    "node-sass": "^4.12.0",
     "nodeman": "^1.1.2",
     "react": "^16.10.1",
     "react-audio-player": "^0.17.0",
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
     "react-voice-recorder": "^2.1.2",
+    "remark-gfm": "^3.0.1",
     "universal-cookie": "^4.0.2"
   },
   "scripts": {
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.51.0"
   }
 }
